Make sure long words wrap

--- a/webapp/src/app/components/board/issue/board-issue.component.scss
+++ b/webapp/src/app/components/board/issue/board-issue.component.scss
@@ -73,6 +73,7 @@ img.avatar {
 }
 .full-summary {
   min-height: 34px;
+  word-wrap:break-word;
 }
 .parallel-tasks-container {
   display: flex;
